# RuggineChat

./: .gitignore  Cargo.toml  README.md
Log/: cpu_log.txt
client/: index.html  package-lock.json  package.json
client/src/: App.css  App.jsx  index.css  package-lock.json
client/src/API/: API.mjs
client/src/components/: ActiveUsers.jsx  ChatInvites.jsx  Home.jsx  Layout.jsx  LoginForm.jsx  Navbar.jsx  WebSocketChat.jsx
client/src/contexts/: WebSocketContext.jsx
src/: chat.rs  cpu_log.rs  invites.rs  lib.rs  main.rs  notifications.rs  performance.rs  routes.rs  state.rs  tracking.rs  types.rs  user.rs  websocket.rs
tests/: chat_flow.rs
