[package]
edition = "2021"
name = "fullstack-app"
version = "0.1.0"
authors = ["Alex Eagleson <alexeagleson@gmail.com>"]
description = "A simple template for a fullstack app with Rust backend and React frontend"
homepage = "https://github.com/alexeagleson/typester"
license = "MIT"
readme = "README.md"
repository = "https://github.com/alexeagleson/typester"
rust-version = "1.63"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-tungstenite = "0.21"